--- a/css/layout.css
+++ b/css/layout.css
@@ -51,6 +51,10 @@ nav a {
 	transition: color var(--transition-fast);
 }
 
+nav a:first-of-type {
+padding-left: 0px;
+}
+
 .header-buttons {
 	display: flex;
 	align-items: center;
